--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -4,22 +4,24 @@ import { getConfigurationCollection } from "../../lib/utils";
 const { data: config } = await getConfigurationCollection();
 ---
 
-<div class="flex flex-col items-center sm:flex-row gap-8">
-  <img
-    src={config.hero.image}
-    alt={`${config.hero.title} Profile Image`}
-    class="rounded-full max-w-40 w-40 h-40 mb-4 z-0"
-  />
-  <div>
-    <h1
-      class="text-3xl sm:text-4xl font-display font-semibold opsz text-center sm:text-left"
-    >
-      {config.hero.title}
-    </h1>
-    <h2
-      class="text-center text-xl sm:text-2xl font-mono font-medium sm:text-left"
-    >
-      <p set:html={config.hero.subtitle}/>
-    </h2>
+<div class="parallax-container">
+  <div class="parallax-element flex flex-col items-center gap-8 sm:flex-row">
+    <img
+      src={config.hero.image}
+      alt={`${config.hero.title} Profile Image`}
+      class="z-0 mb-4 h-40 w-40 max-w-40 rounded-full"
+    />
+    <div>
+      <h1
+        class="font-display opsz has-text-scramble text-center text-3xl font-semibold sm:text-left sm:text-4xl"
+      >
+        {config.hero.title}
+      </h1>
+      <h2
+        class="text-center font-mono text-xl font-medium sm:text-left sm:text-2xl"
+      >
+        <p set:html={config.hero.subtitle} />
+      </h2>
+    </div>
   </div>
 </div>
