--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,19 +4,29 @@ import Hero from "../components/home/Hero.astro";
 import Section from "../components/common/Section.astro";
 import FeaturedProjects from "../components/home/FeaturedProjects.astro";
 import FeaturedArticles from "../components/home/FeaturedArticles.astro";
+import FeaturedExperiences from "../components/home/FeaturedExperiences.astro";
 import { getConfigurationCollection } from "../lib/utils";
 import { getCollection } from "astro:content";
 
-
 const { data: config } = await getConfigurationCollection();
 
-const featuredProjects = (await getCollection("project", (e) => e.data.featured)).map((e) => ({
+const featuredProjects = (
+  await getCollection("project", (e) => e.data.featured)
+).map((e) => ({
   ...e.data,
   url: `${config.site.baseUrl}/projects/${e.data.slug}`,
 }));
-const featuredArticles = (await getCollection("blog", (e) => e.data.featured)).map((e) => ({
+const featuredArticles = (
+  await getCollection("blog", (e) => e.data.featured)
+).map((e) => ({
   ...e.data,
-  url: `${config.site.baseUrl}/blog/${e.data.slug}`
+  url: `${config.site.baseUrl}/blog/${e.data.slug}`,
+}));
+const featuredExperiences = (
+  await getCollection("experience", (e) => e.data.featured)
+).map((e) => ({
+  ...e.data,
+  url: `${config.site.baseUrl}/experience/${e.data.slug}`,
 }));
 ---
 
@@ -25,29 +35,30 @@ const featuredArticles = (await getCollection("blog", (e) => e.data.featured)).m
     <title>{config.globalMeta.title}</title>
     <meta
       name="description"
-      content={config.globalMeta.longDescription ?? config.globalMeta.description}
+      content={config.globalMeta.longDescription ??
+        config.globalMeta.description}
     />
     <meta property="og:title" content={config.globalMeta.title} />
-    <meta
-      property="og:description"
-      content={config.globalMeta.description}
-    />
-    {config.globalMeta.keywords && (
-      <meta name="keywords" content={config.globalMeta.keywords.join(", ")} />
-    )}
-    {config.globalMeta.cardImage && (
-      <meta property="og:image" content={config.globalMeta.cardImage} />
-    )}
+    <meta property="og:description" content={config.globalMeta.description} />
+    {
+      config.globalMeta.keywords && (
+        <meta name="keywords" content={config.globalMeta.keywords.join(", ")} />
+      )
+    }
+    {
+      config.globalMeta.cardImage && (
+        <meta property="og:image" content={config.globalMeta.cardImage} />
+      )
+    }
     <meta property="og:url" content={config.site.baseUrl} />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content={config.globalMeta.title} />
-    <meta
-      name="twitter:description"
-      content={config.globalMeta.description}
-    />
-    {config.globalMeta.cardImage && (
-      <meta name="twitter:image" content={config.globalMeta.cardImage} />
-    )}
+    <meta name="twitter:description" content={config.globalMeta.description} />
+    {
+      config.globalMeta.cardImage && (
+        <meta name="twitter:image" content={config.globalMeta.cardImage} />
+      )
+    }
     <meta http-equiv="content-language" content="en" />
     <meta name="language" content="English" />
     <link rel="canonical" href={config.site.baseUrl} />
@@ -60,5 +71,8 @@ const featuredArticles = (await getCollection("blog", (e) => e.data.featured)).m
   </Section>
   <Section>
     <FeaturedArticles featuredArticles={featuredArticles} />
+  </Section>
+  <Section>
+    <FeaturedExperiences featuredExperiences={featuredExperiences} />
   </Section>
 </Layout>
