--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, render } from "astro:content";
-import Gist from "@kotosha/astro-gist"
+import Gist from "@kotosha/astro-gist";
 import ProjectLayout from "../../layouts/ProjectLayout.astro";
 
 export async function getStaticPaths() {
@@ -24,5 +24,5 @@ const { Content } = await render(project);
 ---
 
 <ProjectLayout frontmatter={project.data}>
-  <Content components={{Gist}}/>
+  <Content components={{ Gist }} />
 </ProjectLayout>
