--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,7 +19,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;1,400&family=Fira+Code:wght@400;700&family=Press+Start+2P&display=swap");
 @plugin "@tailwindcss/typography";
 @variant dark (&:where(.dark, .dark *));
-
+@font-face {
+  font-family: "press-start-2p";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src:
+    url(https://cdn.jsdelivr.net/fontsource/fonts/press-start-2p@latest/latin-400-normal.woff2)
+      format("woff2"),
+    url(https://cdn.jsdelivr.net/fontsource/fonts/press-start-2p@latest/latin-400-normal.woff)
+      format("woff");
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+    U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212,
+    U+2215, U+FEFF, U+FFFD;
+}
 /*
 ================================================================================
   2. THEME & VARIABLES
