--- a/src/components/ArticleSnippet.astro
+++ b/src/components/ArticleSnippet.astro
@@ -20,7 +20,7 @@ const day = timestamp
 ---
 
 <div
-  class="group relative flex gap-x-5 rounded-lg transition-colors hover:bg-[var(--theme-code-bg)] sm:gap-x-8"
+  class="group zag-transition relative flex gap-x-5 rounded-lg transition-colors hover:bg-[var(--theme-code-bg)] sm:gap-x-8"
 >
   <div class="flex w-14 flex-col items-center text-center sm:w-16">
     <div class="font-mono">
