--- a/src/components/ExperienceSnippet.astro
+++ b/src/components/ExperienceSnippet.astro
@@ -15,7 +15,7 @@ const { title, description, url, startMonthYear, endMonthYear, tags } =
 ---
 
 <div
-  class="group relative flex gap-x-5 rounded-lg p-4 transition-colors hover:bg-[var(--theme-code-bg)] sm:gap-x-8"
+  class="group zag-transition relative flex gap-x-5 rounded-lg p-4 transition-colors hover:bg-[var(--theme-code-bg)] sm:gap-x-8"
 >
   <div class="flex flex-col items-center">
     <div
@@ -47,7 +47,7 @@ const { title, description, url, startMonthYear, endMonthYear, tags } =
     <div class="mt-3 flex flex-wrap gap-2">
       {
         tags.map((tag) => (
-          <span class="-zag-text -zag-bg flex-shrink-0 px-2 py-1 text-sm font-semibold">
+          <span class="-zag-text zag-transition -zag-bg flex-shrink-0 px-2 py-1 text-sm font-semibold">
             {tag}
           </span>
         ))
